// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Move Resource to Remote Validating connector selection and form validation for new branch input 1`] = `
<button
  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
  data-testid="cr-field-connectorRef"
  style="width: 350px;"
  type="button"
>
  <span
    class="bp3-button-text"
  >
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
    >
      <span
        class="bp3-popover-wrapper"
      >
        <span
          class="bp3-popover-target Text--targetClass"
        >
          <p
            class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
            tabindex="0"
          >
            ValidGithubRepo
          </p>
        </span>
      </span>
      <div
        class="rightStatus"
      >
        <span
          class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
          data-testid="crf-status"
          icon="full-circle"
        >
          <svg
            data-icon="full-circle"
            height="6"
            viewBox="0 0 16 16"
            width="6"
          >
            <desc>
              full-circle
            </desc>
            <path
              d="M8 0a8 8 0 100 16A8 8 0 108 0z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="Tag--main"
        >
          <span
            class="bp3-tag bp3-minimal"
            id="tag"
          >
            <span
              class="bp3-text-overflow-ellipsis bp3-fill"
            >
              project
            </span>
          </span>
        </span>
      </div>
    </div>
  </span>
  <span
    class="bp3-icon bp3-icon-chevron-down StyledProps--main"
    icon="chevron-down"
  >
    <svg
      data-icon="chevron-down"
      height="14"
      viewBox="0 0 16 16"
      width="14"
    >
      <desc>
        chevron-down
      </desc>
      <path
        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
</button>
`;

exports[`Move Resource to Remote initial rendering snapshot testing for pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main migrateResourceForm"
  >
    <div
      class="bp3-callout bp3-intent-warning migrateResourceWarning"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
      >
        Please make sure you move associated input sets to Git as well and
        <a
          href="https://developer.harness.io/docs/platform/Git-Experience/move-inline-entities-to-git"
          rel="noreferrer"
          target="_blank"
        >
          <b>
             update your existing triggers 
          </b>
        </a>
        to work with remote pipelines.
      </p>
    </div>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      test_pipeline
                    </span>
                  </div>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="moveConfig_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value="test pipeline"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main gitSyncForm gitSyncForm StyledProps--padding-top-large"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-intent-danger"
                  data-id="null-1"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_connectorRef"
                    >
                      connectors.title.gitConnector
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      style="width: 350px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <span
                          class="placeholder"
                        >
                          - select -
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                    <div
                      class="bp3-form-helper-text"
                    >
                      <div
                        class="FormError--errorDiv"
                        data-name="connectorRef"
                      >
                        <span
                          class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                          data-icon="circle-cross"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 13 13"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="FormError--error"
                        >
                          validation.sshConnectorRequired
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="bp3-form-group bp3-intent-danger"
                    data-id="repo-2"
                  >
                    <label
                      class="bp3-label"
                      for="repo"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="moveConfig_repo"
                      >
                        repository
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-intent-danger"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="repo"
                              placeholder="- common.git.selectRepositoryPlaceholder -"
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-helper-text"
                      >
                        <div
                          class="FormError--errorDiv"
                          data-name="repo"
                        >
                          <span
                            class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                            data-icon="circle-cross"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 13 13"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                clip-rule="evenodd"
                                d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="FormError--error"
                          >
                            common.git.validation.repoRequired
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="StyledProps--font StyledProps--main branchSection"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        checked=""
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="git-branch-existing"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 9"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                            fill="#383946"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--font-variation-body"
                      >
                        common.git.existingBranchCommitLabel
                      </span>
                    </label>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="bp3-form-group branchSelector"
                        data-id="branch-3"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- common.git.selectBranchPlaceholder -"
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="main"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main branchSection StyledProps--margin-bottom-large"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        data-test="newBranchRadioBtn"
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                        data-icon="git-new-branch"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 13 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small StyledProps--font-variation-body"
                      >
                        common.git.newBranchCommitLabel
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="filePath-4"
                >
                  <label
                    class="bp3-label"
                    for="filePath"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_filePath"
                    >
                      gitsync.gitSyncForm.yamlPathLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="filePath"
                        placeholder="gitsync.gitSyncForm.enterYamlPath"
                        type="text"
                        value=".harness/test_pipeline.yaml"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group commitMessage"
            data-id="commitMsg-5"
          >
            <label
              class="bp3-label"
              for="commitMsg"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="moveConfig_commitMsg"
              >
                common.git.commitMessage
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="commitMsg"
              >
                pipeline.defaultMoveCommitMsg
              </textarea>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              aria-label="common.moveToGit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                common.moveToGit
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Move Resource to Remote testing for Input set should have pre-filled and disabled git info and call move API 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main migrateResourceForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      is_2
                    </span>
                  </div>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="moveConfig_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value="is 2"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main gitSyncForm gitSyncForm StyledProps--padding-top-large"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="null-1"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_connectorRef"
                    >
                      connectors.title.gitConnector
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      disabled=""
                      style="width: 350px;"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <p
                            class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                          />
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal"
                                id="tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="bp3-form-group bp3-disabled"
                    data-id="repo-2"
                  >
                    <label
                      class="bp3-label"
                      for="repo"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="moveConfig_repo"
                      >
                        repository
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="repo"
                              placeholder="- common.git.selectRepositoryPlaceholder -"
                              style="padding-right: 0px;"
                              type="text"
                              value="sunnykesh-gitSync"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="StyledProps--font StyledProps--main branchSection"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        checked=""
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="git-branch-existing"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 9"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                            fill="#383946"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--font-variation-body"
                      >
                        common.git.existingBranchCommitLabel
                      </span>
                    </label>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="bp3-form-group branchSelector"
                        data-id="branch-3"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- common.git.selectBranchPlaceholder -"
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="master"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main branchSection StyledProps--margin-bottom-large"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        data-test="newBranchRadioBtn"
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                        data-icon="git-new-branch"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 13 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small StyledProps--font-variation-body"
                      >
                        common.git.newBranchCommitLabel
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="filePath-4"
                >
                  <label
                    class="bp3-label"
                    for="filePath"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_filePath"
                    >
                      gitsync.gitSyncForm.yamlPathLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="filePath"
                        placeholder="gitsync.gitSyncForm.enterYamlPath"
                        type="text"
                        value=".harness/is_2.yaml"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group commitMessage"
            data-id="commitMsg-5"
          >
            <label
              class="bp3-label"
              for="commitMsg"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="moveConfig_commitMsg"
              >
                common.git.commitMessage
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="commitMsg"
              >
                pipeline.defaultMoveCommitMsg
              </textarea>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              aria-label="common.moveToGit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                common.moveToGit
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Move Resource to Remote when move throws error with responseMessages 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main migrateResourceForm"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
        class="FormikForm--main"
      >
        <div>
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      is_2
                    </span>
                  </div>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="moveConfig_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value="is 2"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main gitSyncForm gitSyncForm StyledProps--padding-top-large"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                >
                  <label
                    class="bp3-label"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_connectorRef"
                    >
                      connectors.title.gitConnector
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <button
                      class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                      data-testid="cr-field-connectorRef"
                      disabled=""
                      style="width: 350px;"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                        >
                          <p
                            class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                          />
                          <div
                            class="rightStatus"
                          >
                            <span
                              class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                              data-testid="crf-status"
                              icon="full-circle"
                            >
                              <svg
                                data-icon="full-circle"
                                height="6"
                                viewBox="0 0 16 16"
                                width="6"
                              >
                                <desc>
                                  full-circle
                                </desc>
                                <path
                                  d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="Tag--main"
                            >
                              <span
                                class="bp3-tag bp3-minimal"
                                id="tag"
                              >
                                <span
                                  class="bp3-text-overflow-ellipsis bp3-fill"
                                >
                                  project
                                </span>
                              </span>
                            </span>
                          </div>
                        </div>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                        icon="chevron-down"
                      >
                        <svg
                          data-icon="chevron-down"
                          height="14"
                          viewBox="0 0 16 16"
                          width="14"
                        >
                          <desc>
                            chevron-down
                          </desc>
                          <path
                            d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="Layout--horizontal StyledProps--main"
                >
                  <div
                    class="bp3-form-group bp3-disabled"
                  >
                    <label
                      class="bp3-label"
                      for="repo"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="moveConfig_repo"
                      >
                        repository
                      </span>
                       
                      <span
                        class="bp3-text-muted"
                      />
                    </label>
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-popover-wrapper Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group bp3-disabled"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              disabled=""
                              name="repo"
                              placeholder="- common.git.selectRepositoryPlaceholder -"
                              style="padding-right: 0px;"
                              type="text"
                              value="sunnykesh-gitSync"
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                >
                  <div
                    class="StyledProps--font StyledProps--main branchSection"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        checked=""
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="git-branch-existing"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 16 9"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M12.403 3.67H16v1.626h-3.597a4.477 4.477 0 01-8.807 0H0V3.67h3.596a4.477 4.477 0 018.807 0zm-7.26.813a2.857 2.857 0 105.714 0 2.857 2.857 0 00-5.714 0z"
                            fill="#383946"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--margin-left-small StyledProps--inline StyledProps--font-variation-body"
                      >
                        common.git.existingBranchCommitLabel
                      </span>
                    </label>
                    <div
                      class="Layout--horizontal StyledProps--main"
                    >
                      <div
                        class="bp3-form-group branchSelector"
                      >
                        
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-popover-wrapper Select--main bp3-fill"
                          >
                            <div
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-input-group"
                              >
                                <input
                                  autocomplete="off"
                                  class="bp3-input"
                                  name="branch"
                                  placeholder="- common.git.selectBranchPlaceholder -"
                                  style="padding-right: 0px;"
                                  type="text"
                                  value="master"
                                />
                                <span
                                  class="bp3-input-action"
                                >
                                  <span
                                    class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                    icon="chevron-down"
                                  >
                                    <svg
                                      data-icon="chevron-down"
                                      height="14"
                                      viewBox="0 0 16 16"
                                      width="14"
                                    >
                                      <desc>
                                        chevron-down
                                      </desc>
                                      <path
                                        d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                        fill-rule="evenodd"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main branchSection StyledProps--margin-bottom-large"
                  >
                    <label
                      class="bp3-control bp3-radio bp3-large StyledProps--font Radio--radio StyledProps--main"
                    >
                      <input
                        data-test="newBranchRadioBtn"
                        type="radio"
                      />
                      <span
                        class="bp3-control-indicator"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey700"
                        data-icon="git-new-branch"
                      >
                        <svg
                          height="16"
                          viewBox="0 0 13 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.406.003a2.399 2.399 0 00-.8 4.658v.94a.8.8 0 01-.8.8H4.001a2.413 2.413 0 00-.8.14V4.66A2.399 2.399 0 002.402 0a2.399 2.399 0 00-.8 4.661v6.678a2.399 2.399 0 00.8 4.661 2.399 2.399 0 00.8-4.661v-2.54a.8.8 0 01.8-.799h4.803a2.4 2.4 0 002.402-2.4v-.939a2.399 2.399 0 00-.8-4.658z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                      <span
                        class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--margin-left-small StyledProps--font-variation-body"
                      >
                        common.git.newBranchCommitLabel
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="filePath"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="moveConfig_filePath"
                    >
                      gitsync.gitSyncForm.yamlPathLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="filePath"
                        placeholder="gitsync.gitSyncForm.enterYamlPath"
                        type="text"
                        value=".harness/is_2.yaml"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-left-xlarge"
                style="flex-shrink: 1;"
              >
                <div
                  class="Layout--vertical StyledProps--main container shrink StyledProps--background-red100 StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--padding-left-medium StyledProps--padding-right-medium"
                >
                  <div
                    class="StyledProps--font StyledProps--main scroll"
                  >
                    <div
                      class="Layout--vertical StyledProps--main shrink"
                    >
                      <div
                        class="StyledProps--font StyledProps--main StyledProps--margin-bottom-medium"
                      >
                        <span
                          class="StyledProps--font StyledProps--main text StyledProps--font-weight-bold StyledProps--color StyledProps--color-red700 StyledProps--inline"
                        >
                          Error while moving pipeline to remote because file already exist
                        </span>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--margin-right-small"
                          data-icon="info"
                        >
                          <svg
                            height="16"
                            viewBox="0 0 12 12"
                            width="16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96zm1.846-7.352v1.03h-1.01v-1.03z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <div
                          class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                          >
                            common.errorHandler.issueCouldBe
                          </p>
                          <div
                            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                          >
                            <span
                              class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                            >
                              - File you are trying to move already exists in git
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xlarge"
                      >
                        <span
                          class="bp3-icon bp3-icon-lightbulb StyledProps--main StyledProps--margin-right-small"
                          icon="lightbulb"
                        >
                          <svg
                            data-icon="lightbulb"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              lightbulb
                            </desc>
                            <path
                              d="M9.01 14h-2c-.55 0-1 .45-1 1s.45 1 1 1h2c.55 0 1-.45 1-1s-.44-1-1-1zm1-3h-4c-.55 0-1 .45-1 1s.45 1 1 1h4c.55 0 1-.45 1-1s-.44-1-1-1zm-2-11C5.26 0 3.03 1.95 3.03 4.35c0 2.37 1.63 2.64 1.94 5.22 0 .24.22.44.5.44h5.09c.28 0 .5-.19.5-.44C11.37 6.99 13 6.72 13 4.35 13 1.95 10.77 0 8.01 0z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <div
                          class="Layout--vertical StyledProps--main errorListTextContainer shrink"
                        >
                          <p
                            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--font-size-small StyledProps--color StyledProps--color-black StyledProps--margin-bottom-xsmall"
                          >
                            common.errorHandler.tryTheseSuggestions
                          </p>
                          <div
                            class="StyledProps--font StyledProps--main StyledProps--margin-bottom-xsmall"
                          >
                            <span
                              class="StyledProps--font StyledProps--main text StyledProps--color StyledProps--color-black StyledProps--font-size-small StyledProps--inline"
                            >
                              - Please check if pipeline you are trying to move exist in Github
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="bp3-form-group commitMessage"
          >
            <label
              class="bp3-label"
              for="commitMsg"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="moveConfig_commitMsg"
              >
                common.git.commitMessage
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <textarea
                autocomplete="off"
                class="bp3-input bp3-fill"
                maxlength="1024"
                name="commitMsg"
              >
                pipeline.defaultMoveCommitMsg
              </textarea>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
          >
            <button
              aria-label="common.moveToGit"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                common.moveToGit
              </span>
            </button>
               
            <button
              aria-label="cancel"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
